# FlightReport

./: .gitignore  License.md  MIGRACION_SUPABASE.md  README.md  Reportes.txt  app.py  chat.txt  cleanup.bat  configurar_rls_supabase.md  example_secrets.toml  pyproject.toml  reports_concat.txt  requirements.in  requirements.txt  secrets_instrucciones.txt  sql. Schematxt  sql.Schema.md  sql.txt  text.txt  wpp_upload.ipynb
.streamlit/: config.toml
Dashboards/: FlightReport.twb
src/: __init__.py  insert_test_data.py
src/components/: anuncios_textos.py  flight_form.py  tabs_manager.py  timeline_chart.py
src/components/charts/: __init__.py  bar_chart.py  combined_events_chart.py  flight_status_charts.py  gantt_chart.py
src/components/data_processing/: __init__.py  event_processing.py  time_utils.py
src/components/tabs/: __init__.py  announcements_tab.py  data_entry_tab.py  flight_status_tab.py  shift_trades_tab.py  timeline_tab.py  wheelchair_tab.py
src/config/: bigquery_config.py  logging_config.py  supabase_config.py
src/scripts/: debug_supabase.py
src/services/: api_service.py  bigquery_service.py  supabase_service.py
src/utils/: __init__.py  form_utils.py  report_utils.py
tests/components/: __init__.py
tests/components/data_processing/: __init__.py  test_time_utils.py
tests/services/: test_supabase_service.py
